--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,18 @@
 *{
     font-size: 15px;
 }
+body{
+    margin: 0;
+    background-color: var(--meanColor);
+    width: 100%;
+    overflow-x: hidden; /* impede rolagem lateral */
+}
+html{
+    width: 100%;
+    overflow-x: hidden;
+}
 :root{
-    --backgroudColor: rgb(0,0,0);
+    --backgroundColor: rgb(0,0,0);
     --meanColor: rgb(43, 43, 43);
     --meanTextColor: rgb(255, 255, 255);
     --ButtonTextColor: rgb(24, 53, 58);
@@ -10,9 +20,34 @@
     --BlueMeanColor: rgb(151, 252, 255);
     --EmphasisShadow: rgb(255, 255, 255);
 }
-body{
-    margin: 0;
-    background-color: var(--meanColor);
+
+@media (max-width: 768px){
+    /*-----------Cabecalho-----------MOBILE📱*/
+    .phonenon{
+        display: none !important;
+    }
+    .cabContainer{
+        flex-direction: column;
+        align-items: space-around;
+        justify-content: center;
+    }
+    /*minimenu*/
+    div[id="meanMenu"] a{
+        font-size: 0.8em;
+    }
+    .menuContainer{
+        height: 60px;
+        flex-direction: column;
+        gap: 0;
+    }   
+    .FBanner {
+        height: 200px; /*tamanho limite*/
+    }
+    
+
+}
+.phonenon{
+    display: flex;
 }
 
 /*-----------Fontes-----------*/
@@ -38,6 +73,10 @@ body{
 }
 .titleSize{
     font-size: 3em;
+}
+.container{
+    display: grid;
+    grid-template-columns: 1fr;
 }
 /*-----------Cabecalho-----------*/
 .cabContainer{
@@ -82,9 +121,6 @@ div[id="meanMenu"] a{
 }
 div[id="meanMenu"] a:hover{
     color: var(--BlueMeanColor);
-    text-decoration: none;
-    width: 80px;
-    transition: 0.3s;
     transform: scale(1.3);
 }
 /*---------------------------------------------------------------------------content---------------------------------------------------------*/
@@ -109,12 +145,18 @@ div[class="NewsLineConainer"] h1,h2,h3,p{
     margin: 0;
 }
 /*------------banners---------------*/
-.FBanner{
+.FBanner {
     display: flex;
     align-items: center;
     justify-content: center;
+    max-height: 748px; /*tamanho limite*/
+    overflow: hidden; /* corta o que passar da área */
+    border: 1px var(--backgroundColor) solid;
     margin: 0;
-    border: 1px var(--backgroudColor) solid;
+    padding: 0;
+    overflow: hidden;
+    width: 100vw;
+    max-width: 100%;
 }
 .UnitCard{
     border: 1px solid var(--BlueMeanColor);
@@ -175,11 +217,13 @@ div[class="NewsLineConainer"] h1,h2,h3,p{
 .NewsCadContainer{
     display: flex;
     flex-direction: row;
-    margin: 40px;
+    margin: 0;
     gap: 15px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 /*-----------------------------container-------------------------------*/
 .contatoRodapeContainer{
@@ -213,11 +257,11 @@ div[class="contatoRodapeContainer"] a{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--backgroudColor);
+    background-color: var(--backgroundColor);
 }
 /*------------------efeitos a parte----------------------*/
 .shadowboxefect{
-    box-shadow: 0px 0px 20px var(--backgroudColor);
+    box-shadow: 0px 0px 20px var(--backgroundColor);
 }
 .plus20pxMargin{
     margin-bottom: 20px;
